src/objects/Wish_Child_Form__c.object
<CustomObject>
    <fields>
        <fullName>Race_Ethnicity__c</fullName>
        <label>Race/Ethnicity</label>
        <picklist>
            <picklistValues>
                <fullName>American Indian or Alaska Native</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Native Hawaiian/Other Pacific Islander</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White or Caucasian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle Eastern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black or African American</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hispanic, Latino or Spanish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>RelatedContact__c</fullName>
        <label>Related Contact</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Requested_Participant_Name_forWheelchair__c</fullName>
        <label>Requested_Participant_Name_forWheelchair</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Requested_Participant_Name_for_Allergies__c</fullName>
        <label>Requested_Participant_Name_for_Allergies</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Requested_Participant_Name_for_OtherNeed__c</fullName>
        <label>Requested_Participant_Name_for_OtherNeed</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Requested_Participant_Name_for_Oxygen__c</fullName>
        <label>Requested_Participant_Name_for_Oxygen</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Restaurant__c</fullName>
        <description>Wish child&apos;s Favorite restaurant</description>
        <label>Restaurant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SignerMapKeyPair__c</fullName>
        <description>It will hold the signer name for who are going to sign the docusign.</description>
        <label>Hidden SignerMapKeyPair</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Signers__c</fullName>
        <description>This field is hold the signers in wish family form.</description>
        <label>Signers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sit_up_takeoff_landing_on_airplane_Note__c</fullName>
        <label>Sit up takeoff/landing on airplane? Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sit_up_takeoff_landing_on_airplane__c</fullName>
        <label>Sit up takeoff/landing on airplane?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Snack_Food__c</fullName>
        <description>Wish Child&apos;s Favorite Snack Food</description>
        <label>Snack Food</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Social_Media_Link__c</fullName>
        <description>Make-A-Wish would like to stay connected through social media. If interested, please 
provide contact information for each site on which you are active.</description>
        <inlineHelpText>Make-A-Wish would like to stay connected through social media. If interested, please 
provide contact information for each site on which you are active.</inlineHelpText>
        <label>Social Media Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Sport_Athlete__c</fullName>
        <description>Wish child&apos;s Favorite Sport/Athelete</description>
        <label>Sport/Athlete</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>It will hold wish child&apos;s state detail</description>
        <label>State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <description>it will hold child&apos;s address details(about street)</description>
        <label>Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TVShow__c</fullName>
        <description>Wish child&apos;s Favorite TV Show</description>
        <label>TV Show</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T_Shirt_Size__c</fullName>
        <description>Wish Child T-Shirt Size</description>
        <label>T-Shirt Size</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>This_is_my_wish_because__c</fullName>
        <label>This is my wish because</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>To_me_the_most_important_part_of_my_wish__c</fullName>
        <label>To me,the most important part of my wish</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>When_I_m_inside_I_like_to__c</fullName>
        <description>Other favorites</description>
        <label>When I’m inside, I like to…</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>When_I_m_outside_I_like_to__c</fullName>
        <description>Other Favorites</description>
        <label>When I’m outside, I like to...</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>When_I_m_with_my_family_I_like_to__c</fullName>
        <description>Other favorites</description>
        <label>When I’m with my family, I like to…</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>When_I_m_with_my_friends_I_like_to__c</fullName>
        <description>Other favorites</description>
        <label>When I’m with my friends, I like to…</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>When_I_think_about_my_wish_I_imagine__c</fullName>
        <label>When I think about my wish, I imagine….</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>When_thinking_some_of_my_wish_ideas_were__c</fullName>
        <label>When thinking,some of my wish ideas were</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Will_a_rental_car_seat_s_Details__c</fullName>
        <description>Wish Family form Travel question3</description>
        <label>Will a rental car seat(s)  Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Will_a_rental_car_seat_s_be_needed_Note__c</fullName>
        <label>Will a rental car seat(s) be needed?Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Will_a_rental_car_seat_s_be_needed__c</fullName>
        <label>Will a rental car seat(s) be needed?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Will_a_rental_stroller_Details__c</fullName>
        <description>Wish Family form Travel question5</description>
        <label>Will a rental stroller Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Will_a_rental_stroller_be_needed_Note__c</fullName>
        <label>Will a rental stroller be needed? Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Will_a_rental_stroller_be_needed__c</fullName>
        <label>Will a rental stroller be needed?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Will_an_interpreter_be_needed_Details__c</fullName>
        <description>Wish Family form Travel question2</description>
        <label>Will an interpreter be needed Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Will_an_interpreter_be_needed_Note__c</fullName>
        <label>Will an interpreter be needed? Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Will_an_interpreter_be_needed__c</fullName>
        <label>Will an interpreter be needed?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Will_handicap_accessible_Details__c</fullName>
        <description>Wish Family form Travel question6</description>
        <label>Will handicap accessible Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Will_your_family_bring_wheelchair_Note__c</fullName>
        <label>Will_your_family_bring_wheelchair_Note__</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Will_your_family_bring_wheelchair__c</fullName>
        <label>Will your family bring wheelchair?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WishType__c</fullName>
        <globalPicklist>Wish_Type</globalPicklist>
        <label>Wish Type</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Wish_Determination_Case_Id__c</fullName>
        <description>It holds the Wish Determination Case Id value.</description>
        <label>Wish Determination Case Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wish_Family_Contact__c</fullName>
        <label>Wish Family Contact</label>
        <length>131000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Wish_Liability_Envolep__c</fullName>
        <description>This field is used to store the the Wish liability envolep from docusign.</description>
        <label>Hidden Wish Liability Envolep</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wish_Notes__c</fullName>
        <label>Wish Notes…</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Wish_child_receive_nursing_care_Note__c</fullName>
        <description>Notes on nursing care that wish child receives</description>
        <label>Wish child receive nursing care? Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Wish_child_receive_nursing_care__c</fullName>
        <description>Details on wish child receiving nurse care</description>
        <label>Wish child receive nursing care?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <description>It will hold wish child zip code detail.</description>
        <label>Zip Code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mobilePhone__c</fullName>
        <description>Wish child&apos;s mobile phone</description>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>oxygen_Details__c</fullName>
        <label>oxygen Details</label>
        <type>TextArea</type>
    </fields>
    <label>Wish Paperwork Packet</label>
    <nameField>
        <displayFormat>WC-{00}</displayFormat>
        <label>Wish Child Form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Wish Paperwork Packets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>